# IXV-util-MarkItDown

./: .gitignore  CONTRIBUTING.md  Gemfile  IXV-util-MarkItDown-mac.spec  IXV-util-MarkItDown.spec  LICENSE  README.md  README_en.md  pyproject.toml  setup.py  wrapper.py
.github/workflows/: pages.yml  release.yml
docs/: _config.yml  index.md
markitdown/: cli.py
scripts/: IXV-util-MarkItDown-mac.spec  IXV-util-MarkItDown-win.spec  batch_convert_preserve_structure.sh  build.py  convert_keep_dir_construct.sh  update-upstream.sh
src/: __init__.py  cli.py  github_release.py  image_extractor.py
src/util/: ascii_logo.py
upstream/: README.md
workflows/: copy-readme.yml  pages.yml
