[project]
name = "IXV-util-MarkItDown"
version = "0.0.2"
description = "Simple docx to Markdown converter"
authors = [
    {name = "Elvez", email = "info@elvez.co.jp"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "markitdown[all] @ {root:uri}/upstream/packages/markitdown",
]

[project.scripts]
IXV-util-MarkItDown = "markitdown.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["markitdown"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.pyinstaller]
# PyInstallerの設定（参考情報）
entry-point = "wrapper.py"
onefile = true
name = "markitdown"
console = true

[tool.pyinstaller.macos]
# macOS 単一実行ファイル作成用のPyInstaller設定
entry-point = "wrapper.py"
onefile = true
name = "IXV-util-MarkItDown"
console = true
distpath = "./dist"
